--- a/package.json
+++ b/package.json
@@ -8,21 +8,30 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "update-dependencies": "npx -y npm-check-updates -u"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@types/node": "10.17.27",
-    "@types/prettier": "2.6.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
-    "aws-cdk": "2.24.1",
-    "ts-node": "^10.7.0",
-    "typescript": "~3.9.7"
+    "@types/jest": "^28.1.6",
+    "@types/node": "18.0.6",
+    "@types/prettier": "2.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "aws-cdk": "2.33.0",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
+    "eslint-plugin-etc": "^2.0.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-unicorn": "^43.0.2",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.7.4"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.24.1",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "2.33.0",
+    "constructs": "^10.1.54",
     "source-map-support": "^0.5.21"
   }
 }
